schema/testdata/errors/flow_inputs.keel
flow MyFlow1 {
    inputs {
        //expect-error:9:14:FlowDefinitionError:Flow input 'thing' is defined with unsupported type Thing
        thing Thing
        duplicate Number
        //expect-error:9:18:DuplicateDefinitionError:Flow input with name 'duplicate' already exists
        duplicate Text
    }
}

//expect-error:6:13:FlowDefinitionError:Flow 'MyFlow2' is scheduled and so cannot also have inputs
flow MyFlow2 {
    inputs {
        myField Text
    }
    @schedule("* * * * *")
}

model Thing {
}
